<resources>
    <string name="app_name">Piaball_Jogador</string>

    <!-- Caixa de textos para a parte introdutória do app -->
    <string name="intro1_texto_principal">O esporte mais adorado do planeta. Muita emoção a cada partida, a cada lance. Você pertence a ele!</string>
    <string name="intro1_texto_secundario">Emoção, alegria, metas.</string>

    <string name="intro2_texto_principal">E aí, jogador? Cadastre, organize, veja seus desarmes, gols, assistências e tudo mais!!</string>
    <string name="intro2_texto_secundario">Organização, rendimento, controle.</string>

    <!-- Caixa de textos para a tela de introdução de cadastro-->
    <string name="motiva_criar_conta">Crie sua conta grátis</string>
    <string name="motiva1">O Piaball Jogador vai estar junto com você</string>
    <string name="btn_cadastrar">CADASTRE-SE</string>
    <string name="tenho_conta">Já tenho conta</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Piaball Jogador</string>
    <string name="nav_header_subtitle">Golaço é você está aqui</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>

    <string name="menu_home">Campo Grande</string>
    <string name="menu_gallery">Minicampo</string>
    <string name="menu_slideshow">Como tô em Campo Grande</string>
    <string name="menu_media_minicampo">Como tô em Minicampo</string>

    <!-- Caixa de textos para a tela de cadastro-->
    <string name="motiva_cadastro">Bora se cadastrar</string>
    <string name="nome_cadastro">Nome</string>
    <string name="email_cadastro">E-mail</string>
    <string name="senha_cadastro">Senha</string>
    <string name="btn_cadastro">Bora</string>
    <string name="termos_uso">Termos de uso</string>

    <!-- Caixa de textos para a tela de login-->
    <string name="motiva_login">Bora lá</string>
    <string name="email_login">E-mail</string>
    <string name="senha_login">Senha</string>
    <string name="btn_login">Bora</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>