<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        >

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_campo_grande_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_minicampo_24"
            android:title="@string/menu_gallery" />
    </group>

    <item android:title="Suas médias">

        <menu>

            <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_baseline_media_campo_grande_24"
                android:title="@string/menu_slideshow" />
            <item
                android:id="@+id/nav_MediaMinicampo"
                android:icon="@drawable/ic_baseline_media_minicampo_24"
                android:title="@string/menu_media_minicampo"/>

        </menu>

    </item>

</menu>